# Ai-research-analyzer-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/agents/: agent.py
app/api/: routes.py
app/core/: crew_engine.py  mock_engine.py  orchestrator.py
app/schemas/: report.py
app/tasks/: tasks.py
app/tools/: mock_search.py  search_tool.py
app/utils/: log.py
tests/: test_agents.py  test_api_analyze.py  test_crew_engine.py  test_health.py  test_mock_engine.py  test_schemas.py  test_search_tool.py  test_tasks.py
